# labwork8

./: CMakeLists.txt  README.md
lib/: BST.h
tests/: testing.cpp
